[package]
name = "flashdb"
version = "0.1.0"
edition = "2021"
authors = ["Awais khan <contact@awaiskhan.com.pk>"]
repository = "https://github.com/codiux-net/flash-db"
keywords = ["database", "keyvalue", "storage", "memorydb"]
categories = ["database", "database-implementations", "data-structures"]
license = "MIT"
description = "A simple key-value store in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"  # Or another compatible version with regex
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.8.4"  # Explicitly specify a compatible regex version

[lib]
name = "flashdb"
path = "src/main.rs"